--- a/styles/main.css
+++ b/styles/main.css
@@ -433,10 +433,7 @@ footer h1{
 .fa-facebook {
     background: #3B5998;
     color: #fff;
-}
-.fa-instagram {
-  background: #125688;
-  color: #fff;
+    margin-left: 20%;
 }
 .copyright{
   font-size: .8rem;
@@ -445,6 +442,7 @@ footer h1{
 }
 .container-footer{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -453,8 +451,10 @@ footer h1{
 }
 .acesso-restrito {
   margin-left: 25%;
-  border-bottom: solid 3px #fff;
-  color: rgb(240,37,42);
+  color: #fff;
+  padding: .5rem;
+  border-radius: 15px;
+  background:  var(--vermelho-logo);
 }
 .logo-footer{
   width: 15%;
@@ -470,7 +470,7 @@ footer h1{
         width: 100%;
     }
     .tabcontent{
-      width: 73.50%;
+      width: 89%;
     }
     #noticias-evento{
       width: 100%;
@@ -665,8 +665,26 @@ footer h1{
     #bd4{
         top: 106px;
     }
-
+    .info-boletim .large{
+     margin-left: 20%;
+    }
     .titulo_local_evento{
         width: 100%
+    }
+    .container-footer{
+      flex-direction: column;
+    }
+    .logo-footer, .acesso-restrito, .fa, .copyright{
+      margin: 6%;
+    }
+    .acesso-restrito{
+      margin: 0 auto;
+      padding: .2rem;
+      width: 20vw;
+    }
+    .copyright{
+      margin: 0 auto;
+      margin-top: 5%;
+      width: 70vw;
     }
 }
